--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/App.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/App.xaml
@@ -1,7 +1,23 @@
 ﻿<Application
     x:Class="Pango.Desktop.Uwp.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Pango.Desktop.Uwp">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary>
 
+                    <!--  Resource dictionaries  -->
+                    <ResourceDictionary.MergedDictionaries>
+                        <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
+
+                        <ResourceDictionary Source="Resources/Styles/Text.xaml" />
+                    </ResourceDictionary.MergedDictionaries>
+
+                    <!--  Misc resources  -->
+                    <Thickness x:Key="DocumentationPageContentPadding">20</Thickness>
+                </ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
