--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/SignInView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/SignInView.xaml
@@ -1,15 +1,82 @@
 ﻿<UserControl
-    x:Class="Pango.Desktop.Uwp.Views.SelectUserView"
+    x:Class="Pango.Desktop.Uwp.Views.SignInView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Pango.Desktop.Uwp.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:behaviors="using:Microsoft.Toolkit.Uwp.UI.Behaviors"
+    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
+    xmlns:loc="using:Pango.Desktop.Uwp.Core.Localization"
+    xmlns:viewmodels="using:Pango.Desktop.Uwp.ViewModels"
     mc:Ignorable="d"
-    d:DesignHeight="300"
-    d:DesignWidth="400">
+    d:DataContext="{d:DesignInstance Type=viewmodels:SignInViewModel}"
+    d:DesignHeight="800"
+    d:DesignWidth="800">
 
     <Grid>
 
+        <Grid HorizontalAlignment="Center"
+              VerticalAlignment="Center">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+
+            <TextBlock Text="{loc:StringResource Key=SelectUser}"
+                       Style="{StaticResource SubtitleTextBlockStyle}"/>
+            
+            <ListView Margin="0,40"
+                      Grid.Row="1"
+                      ItemsSource="{Binding Path=Users}">
+                <ListView.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <StackPanel Background="Transparent" 
+                                    Orientation="Horizontal" />
+                    </ItemsPanelTemplate>
+                </ListView.ItemsPanel>
+
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <SymbolIcon Symbol="Contact2" Margin="2"/>
+                            <TextBlock Margin="2"
+                                       Text="{Binding}" />
+                        </StackPanel>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+
+            <Grid Grid.Row="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+
+                <TextBlock Margin="2" Text="{loc:StringResource Key=EnterMastercode}"/>
+
+                <PasswordBox Margin="2" 
+                             Grid.Row="1"
+                             IsTapEnabled="True" 
+                             IsTabStop="True"
+                             x:Name="PasscodePasswordBox"
+                             Password="{Binding Passcode, Mode=TwoWay}"
+                             PlaceholderText="{loc:StringResource Key=Mastercode}">
+                    <interactivity:Interaction.Behaviors>
+                        <behaviors:AutoFocusBehavior />
+                    </interactivity:Interaction.Behaviors>
+                </PasswordBox>
+
+                <Button Grid.Row="2"
+                        Margin="10"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Content="{loc:StringResource Key=SignIn}"
+                        Command="{Binding Path=SignInCommand}"/>
+            </Grid>
+            
+        </Grid>
     </Grid>
 </UserControl>
