--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/App.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/App.xaml
@@ -1,12 +1,12 @@
 ﻿<Application
     x:Class="Pango.Desktop.Uwp.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="using:Pango.Desktop.Uwp.Core.Converters">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary>
-
                     <!--  Resource dictionaries  -->
                     <ResourceDictionary.MergedDictionaries>
                         <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
@@ -14,6 +14,7 @@
                         <ResourceDictionary Source="Resources/Styles/Text.xaml" />
                     </ResourceDictionary.MergedDictionaries>
 
+                    <converters:NullToCollapsedConverter x:Key="NullToCollapsedConverter"/>
                     <!--  Misc resources  -->
                     <Thickness x:Key="DocumentationPageContentPadding">20</Thickness>
                 </ResourceDictionary>
