Add PageBase and ViewBase

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/SignInView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/SignInView.xaml
@@ -1,4 +1,5 @@
-﻿<UserControl
+﻿<abstract:ViewBase
+    xmlns:abstract="using:Pango.Desktop.Uwp.Views.Abstract"
     x:Class="Pango.Desktop.Uwp.Views.SignInView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -81,4 +82,4 @@
             
         </Grid>
     </Grid>
-</UserControl>
+</abstract:ViewBase>
