--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/HomeView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/HomeView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="Pango.Desktop.Uwp.Views.HomeView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -12,4 +12,4 @@
     <Grid>
 
     </Grid>
-</UserControl>
+</Page>
