--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/MainAppView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/MainAppView.xaml
@@ -1,4 +1,5 @@
-﻿<UserControl
+﻿<abstract:ViewBase
+    xmlns:abstract="using:Pango.Desktop.Uwp.Views.Abstract"
     x:Class="Pango.Desktop.Uwp.Views.MainAppView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -23,22 +24,6 @@
             <muxc:NavigationView.Resources>
                 <Thickness x:Key="NavigationViewContentMargin">0,0,0,12</Thickness>
             </muxc:NavigationView.Resources>
-
-            <!--<muxc:NavigationView.AutoSuggestBox>
-                        <AutoSuggestBox
-                            AutomationProperties.Name="Search"
-                            PlaceholderText="Search"
-                            QueryIcon="Find"
-                            SuggestionChosen="AutoSuggestBox_OnSuggestionChosen"
-                            TextChanged="SearchBox_OnTextChanged">
-                            <AutoSuggestBox.ItemTemplate>
-                                <DataTemplate x:DataType="navigation:NavigationEntry">
-                                    <TextBlock Text="{x:Bind Name}" TextTrimming="CharacterEllipsis" />
-                                </DataTemplate>
-                            </AutoSuggestBox.ItemTemplate>
-                        </AutoSuggestBox>
-                    </muxc:NavigationView.AutoSuggestBox>-->
-
             <muxc:NavigationView.MenuItems>
                 <muxc:NavigationViewItem
                             x:Name="HomeItem"
@@ -49,7 +34,11 @@
                 <muxc:NavigationViewItem
                             x:Name="PasswordsItem"
                             Content="Passwords/Secrets"
-                            Icon="People" />
+                            Icon="Permissions" />
+                <muxc:NavigationViewItem
+                            x:Name="UserItem"
+                            Content="User"
+                            Icon="Contact" />
                 <muxc:NavigationViewItem
                             x:Name="SettingsItem"
                             Content="Settings"
@@ -64,4 +53,4 @@
 
         </muxc:NavigationView>
     </Grid>
-</UserControl>
+</abstract:ViewBase>
