--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/SettingsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/SettingsView.xaml
@@ -1,4 +1,5 @@
-﻿<UserControl
+﻿<abstract:PageBase
+    xmlns:abstract="using:Pango.Desktop.Uwp.Views.Abstract"
     x:Class="Pango.Desktop.Uwp.Views.SettingsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -12,4 +13,4 @@
     <Grid>
 
     </Grid>
-</UserControl>
+</abstract:PageBase>
