--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/MainAppView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/MainAppView.xaml
@@ -1,11 +1,12 @@
 ﻿<abstract:ViewBase
-    xmlns:abstract="using:Pango.Desktop.Uwp.Views.Abstract"
     x:Class="Pango.Desktop.Uwp.Views.MainAppView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
+    xmlns:loc="using:Pango.Desktop.Uwp.Core.Localization"
+    xmlns:abstract="using:Pango.Desktop.Uwp.Views.Abstract"
     muxc:BackdropMaterial.ApplyToRootOrPageBackground="True"
     mc:Ignorable="d"
     d:DesignHeight="300"
@@ -27,22 +28,25 @@
             <muxc:NavigationView.MenuItems>
                 <muxc:NavigationViewItem
                             x:Name="HomeItem"
-                            Content="Home"
+                            Content="{loc:StringResource Key=Home}"
                             Icon="Home"
-                            ToolTipService.ToolTip="Introduction to the MVVM Toolkit package, how to install it and the types it contains." />
+                            ToolTipService.ToolTip="{loc:StringResource Key=Home}"/>
                 <muxc:NavigationViewItemSeparator />
                 <muxc:NavigationViewItem
                             x:Name="PasswordsItem"
-                            Content="Passwords/Secrets"
-                            Icon="Permissions" />
+                            Content="{loc:StringResource Key=Passwords}"
+                            Icon="Permissions"
+                            ToolTipService.ToolTip="{loc:StringResource Key=Passwords}" />
                 <muxc:NavigationViewItem
                             x:Name="UserItem"
-                            Content="User"
-                            Icon="Contact" />
+                            Content="{loc:StringResource Key=User}"
+                            Icon="Contact" 
+                            ToolTipService.ToolTip="{loc:StringResource Key=UserInfo}"/>
                 <muxc:NavigationViewItem
                             x:Name="SettingsItem"
-                            Content="Settings"
-                            Icon="Setting" />
+                            Content="{loc:StringResource Key=Settings}"
+                            Icon="Setting" 
+                            ToolTipService.ToolTip="{loc:StringResource Key=Settings}"/>
                 <muxc:NavigationViewItem />
             </muxc:NavigationView.MenuItems>
 
