--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Styles/Text.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Styles/Text.xaml
@@ -2,13 +2,13 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <x:Double x:Key="ExtraSmallFontSize">12</x:Double>
+    <!--<x:Double x:Key="ExtraSmallFontSize">12</x:Double>
     <x:Double x:Key="SmallFontSize">13</x:Double>
     <x:Double x:Key="BodyFontSize">14</x:Double>
     <x:Double x:Key="TitleFontSize">16</x:Double>
-    <x:Double x:Key="HeaderFontSize">18</x:Double>
+    <x:Double x:Key="HeaderFontSize">18</x:Double>-->
 
-    <Style x:Key="ExtraSmallTextBlockStyle"
+    <!--<Style x:Key="ExtraSmallTextBlockStyle"
            TargetType="TextBlock">
         <Setter Property="FontSize" Value="{StaticResource ExtraSmallFontSize}" />
     </Style>
@@ -32,6 +32,6 @@
     <Style x:Key="HeaderTextBlockStyle"
            TargetType="TextBlock">
         <Setter Property="FontSize" Value="{StaticResource HeaderFontSize}" />
-    </Style>
+    </Style>-->
     
 </ResourceDictionary>
