--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/SignInView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/SignInView.xaml
@@ -8,6 +8,7 @@
     xmlns:behaviors="using:Microsoft.Toolkit.Uwp.UI.Behaviors"
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:loc="using:Pango.Desktop.Uwp.Core.Localization"
+    xmlns:enums="using:Pango.Desktop.Uwp.Core.Enums"
     xmlns:viewmodels="using:Pango.Desktop.Uwp.ViewModels"
     mc:Ignorable="d"
     d:DataContext="{d:DesignInstance Type=viewmodels:SignInViewModel}"
@@ -15,71 +16,99 @@
     d:DesignWidth="800">
 
     <Grid>
+        <Pivot SelectedIndex="{Binding SignInStepIndex}">
+            <PivotItem>
+                <Grid HorizontalAlignment="Center"
+                      VerticalAlignment="Center">
 
-        <Grid HorizontalAlignment="Center"
-              VerticalAlignment="Center">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
 
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
+                    <TextBlock Text="{loc:StringResource Key=SelectUser}"
+                               Style="{StaticResource SubtitleTextBlockStyle}"/>
 
-            <TextBlock Text="{loc:StringResource Key=SelectUser}"
-                       Style="{StaticResource SubtitleTextBlockStyle}"/>
+                    <ListView Margin="0,40"
+                              Grid.Row="1"
+                              ItemsSource="{Binding Path=Users}"
+                              SelectedValue="{Binding Path=SelectedUser, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                        <ListView.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <StackPanel Background="Transparent" 
+                                            Orientation="Horizontal" />
+                            </ItemsPanelTemplate>
+                        </ListView.ItemsPanel>
+
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <SymbolIcon Symbol="Contact2" Margin="2"/>
+                                    <TextBlock Margin="2"
+                                               Text="{Binding Username}" />
+                                </StackPanel>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </Grid>
+            </PivotItem>
             
-            <ListView Margin="0,40"
-                      Grid.Row="1"
-                      ItemsSource="{Binding Path=Users}"
-                      SelectedValue="{Binding Path=SelectedUser, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-                <ListView.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <StackPanel Background="Transparent" 
-                                    Orientation="Horizontal" />
-                    </ItemsPanelTemplate>
-                </ListView.ItemsPanel>
+            <PivotItem>
+                <Grid HorizontalAlignment="Center"
+                      VerticalAlignment="Center"
+                      MinWidth="250">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
 
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel Orientation="Horizontal">
-                            <SymbolIcon Symbol="Contact2" Margin="2"/>
-                            <TextBlock Margin="2"
-                                       Text="{Binding Username}" />
-                        </StackPanel>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
+                    <StackPanel Margin="10
+                                " Orientation="Horizontal"
+                                HorizontalAlignment="Center">
+                        <SymbolIcon Margin="2" 
+                                    Symbol="Contact2" />
+                        <TextBlock Margin="2"
+                                   Text="{Binding SelectedUser.Username}" />
+                    </StackPanel>
 
-            <Grid Grid.Row="2"
-                  Visibility="{Binding Path=SelectedUser, Converter={StaticResource NullToCollapsedConverter}, UpdateSourceTrigger=PropertyChanged}">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-
-                <TextBlock Margin="2" Text="{loc:StringResource Key=EnterMastercode}"/>
-
-                <PasswordBox Margin="2" 
+                    <PasswordBox Margin="2" 
                              Grid.Row="1"
                              IsTapEnabled="True" 
                              IsTabStop="True"
                              x:Name="PasscodePasswordBox"
                              Password="{Binding Passcode, Mode=TwoWay}"
-                             PlaceholderText="{loc:StringResource Key=Mastercode}">
-                    <interactivity:Interaction.Behaviors>
-                        <behaviors:AutoFocusBehavior />
-                    </interactivity:Interaction.Behaviors>
-                </PasswordBox>
+                             PlaceholderText="{loc:StringResource Key=EnterMastercode}">
+                        <interactivity:Interaction.Behaviors>
+                            <behaviors:AutoFocusBehavior />
+                        </interactivity:Interaction.Behaviors>
+                    </PasswordBox>
 
-                <Button Grid.Row="2"
-                        Margin="10"
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        Content="{loc:StringResource Key=SignIn}"
-                        Command="{Binding Path=SignInCommand}"/>
-            </Grid>
-            
-        </Grid>
+                    <StackPanel Grid.Row="2"
+                                Margin="0,10"
+                                Orientation="Horizontal"
+                                VerticalAlignment="Center"
+                                HorizontalAlignment="Right">
+
+                        <Button Margin="2" 
+                                Command="{Binding Path=NavigateToStep}"
+                                Content="{loc:StringResource Key=ChangeUser}">
+                            <Button.CommandParameter>
+                                <enums:SignInStep>SelectUser</enums:SignInStep>
+                            </Button.CommandParameter>
+                        </Button>
+
+                        <Button Margin="2" 
+                                Command="{Binding Path=SignInCommand}" 
+                                Content="{loc:StringResource Key=SignIn}"
+                                Style="{StaticResource AccentButtonStyle}"/>
+                    </StackPanel>
+                </Grid>
+
+            </PivotItem>
+
+        </Pivot>
+        
+        
     </Grid>
 </abstract:ViewBase>
