--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/SignInView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/SignInView.xaml
@@ -45,7 +45,7 @@
                                 <StackPanel Orientation="Horizontal">
                                     <SymbolIcon Symbol="Contact2" Margin="2"/>
                                     <TextBlock Margin="2"
-                                               Text="{Binding Username}" />
+                                               Text="{Binding UserName}" />
                                 </StackPanel>
                             </DataTemplate>
                         </ListView.ItemTemplate>
@@ -69,7 +69,7 @@
                         <SymbolIcon Margin="2" 
                                     Symbol="Contact2" />
                         <TextBlock Margin="2"
-                                   Text="{Binding SelectedUser.Username}" />
+                                   Text="{Binding SelectedUser.UserName}" />
                     </StackPanel>
 
                     <PasswordBox Margin="2" 
