--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/SettingsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/SettingsView.xaml
@@ -3,14 +3,84 @@
     x:Class="Pango.Desktop.Uwp.Views.SettingsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Pango.Desktop.Uwp.Views"
+    xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
+    xmlns:loc="using:Pango.Desktop.Uwp.Core.Localization"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     d:DesignHeight="300"
-    d:DesignWidth="400">
+    d:DesignWidth="800">
 
-    <Grid>
+    <StackPanel
+        Orientation="Vertical">
+        <!--Security Section-->
+        <StackPanel
+            Orientation="Vertical">
+            <TextBlock 
+                Text="{loc:StringResource Key=Security}"/>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
 
-    </Grid>
+                <StackPanel
+                    Orientation="Vertical">
+                    <TextBlock
+                        Text="{loc:StringResource Key=Autolock}"/>
+                    <TextBlock
+                        Text="{loc:StringResource Key=Autolock_Description}"/>
+                </StackPanel>
+                <ToggleSwitch
+                    Grid.Column="1"
+                    FlowDirection="RightToLeft"
+                    OnContent="{loc:StringResource Key=Switcher_On}"
+                    OffContent="{loc:StringResource Key=Switcher_Off}"
+                    IsOn="{Binding AllowAutolock}"/>
+            </Grid>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+
+                <StackPanel
+                    Orientation="Vertical">
+                    <TextBlock
+                        Text="{loc:StringResource Key='Clear copied item data'}"/>
+                    <TextBlock
+                        Text="{loc:StringResource Key='Clear copied item data_Description'}"/>
+                </StackPanel>
+                <ToggleSwitch
+                    Grid.Column="1"
+                    FlowDirection="RightToLeft"
+                    OnContent="{loc:StringResource Key=Switcher_On}"
+                    OffContent="{loc:StringResource Key=Switcher_Off}"
+                    IsOn="{Binding AllowClearCopiedData}"/>
+            </Grid>
+        </StackPanel>
+        
+        <!--Language Section-->
+        <StackPanel
+            Orientation="Vertical">
+            <TextBlock 
+                Text="{loc:StringResource Key=Security}"/>
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+
+                <StackPanel
+                    Orientation="Vertical">
+                    <TextBlock
+                        Text="{loc:StringResource Key='Choose application language'}"/>
+                    <TextBlock
+                        Text="{loc:StringResource Key='Choose application language_Description'}"/>
+                </StackPanel>
+                <Дропдаун
+            </Grid>
+        </StackPanel>
+    </StackPanel>
 </abstract:PageBase>
