Implement the index view of user's passwords

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -4,12 +4,67 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:loc="using:Pango.Desktop.Uwp.Core.Localization"
+    xmlns:viewmodels="using:Pango.Desktop.Uwp.ViewModels"
     xmlns:abstract="using:Pango.Desktop.Uwp.Views.Abstract"
     mc:Ignorable="d"
+    d:DataContext="{d:DesignInstance Type=viewmodels:PasswordsViewModel}"
     d:DesignHeight="300"
     d:DesignWidth="400">
 
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
+        <TextBlock Text="{loc:StringResource Key=MyPasswords}"
+                   Style="{StaticResource HeaderTextBlockStyle}"
+                   Margin="20,10"/>
+
+        <CommandBar Grid.Row="1" 
+                    IsOpen="False" 
+                    Background="Transparent"
+                    DefaultLabelPosition="Right">
+            <AppBarButton Icon="Add" 
+                          Label="{loc:StringResource Key=New}"
+                          ToolTipService.ToolTip="{loc:StringResource Key=AddNewPassword}"/>
+        </CommandBar>
+        
+        <Grid Grid.Row="2">
+            <ListView ItemsSource="{Binding Path=Passwords}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                            
+                            <TextBlock Text="{Binding Path=Name}"
+                                       VerticalAlignment="Center"/>
+
+                            <StackPanel Grid.Column="1" 
+                                        Orientation="Horizontal">
+                                <Button Margin="2" 
+                                        ToolTipService.ToolTip="{loc:StringResource Key=CopyPassword}">
+                                    <FontIcon Glyph="&#xE8C8;"/>
+                                </Button>
+                                <Button Margin="2" 
+                                        ToolTipService.ToolTip="{loc:StringResource Key=EditPassword}">
+                                    <FontIcon Glyph="&#xE70F;"/>
+                                </Button>
+                                <Button Margin="2" 
+                                        ToolTipService.ToolTip="{loc:StringResource Key=DeletePassword}">
+                                    <FontIcon Glyph="&#xE74D;"/>
+                                </Button>
+                            </StackPanel>
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Grid>
+        
     </Grid>
 </abstract:PageBase>
