--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Styles/Text.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Resources/Styles/Text.xaml
@@ -2,6 +2,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <x:Double x:Key="FontIconSize">14</x:Double>
+    
     <!--<x:Double x:Key="ExtraSmallFontSize">12</x:Double>
     <x:Double x:Key="SmallFontSize">13</x:Double>
     <x:Double x:Key="BodyFontSize">14</x:Double>
