--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -6,7 +6,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:loc="using:Pango.Desktop.Uwp.Core.Localization"
     xmlns:viewmodels="using:Pango.Desktop.Uwp.ViewModels"
-    xmlns:abstract="using:Pango.Desktop.Uwp.Views.Abstract"
+    xmlns:abstract="using:Pango.Desktop.Uwp.Views.Abstract" xmlns:controls="using:Pango.Desktop.Uwp.Controls"
     mc:Ignorable="d"
     d:DataContext="{d:DesignInstance Type=viewmodels:PasswordsViewModel}"
     d:DesignHeight="300"
@@ -21,18 +21,35 @@
 
         <TextBlock Text="{loc:StringResource Key=MyPasswords}"
                    Style="{StaticResource HeaderTextBlockStyle}"
-                   Margin="20,10"/>
+                   Margin="20"/>
 
-        <CommandBar Grid.Row="1" 
-                    IsOpen="False" 
-                    Background="Transparent"
-                    DefaultLabelPosition="Right">
-            <AppBarButton Icon="Add" 
-                          Label="{loc:StringResource Key=New}"
-                          ToolTipService.ToolTip="{loc:StringResource Key=AddNewPassword}"/>
-        </CommandBar>
+        <Grid Grid.Row="1"
+              Margin="15, 0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+
+            <controls:FiltrationTextBox Margin="0,0" 
+                     MinWidth="300"
+                     PlaceholderText="{loc:StringResource Key=SearchPasswords}"
+                     VerticalAlignment="Center"
+                     HorizontalAlignment="Left"/>
+
+            <CommandBar Grid.Column="1" 
+                        IsOpen="False" 
+                        Background="Transparent"
+                        DefaultLabelPosition="Right">
+
+                <AppBarButton Icon="Add" 
+                              Label="{loc:StringResource Key=New}"
+                              ToolTipService.ToolTip="{loc:StringResource Key=AddNewPassword}"/>
+            </CommandBar>
+        </Grid>
         
-        <Grid Grid.Row="2">
+        
+        <Grid Grid.Row="2"
+              Margin="10">
             <ListView ItemsSource="{Binding Path=Passwords}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
@@ -49,15 +66,18 @@
                                         Orientation="Horizontal">
                                 <Button Margin="2" 
                                         ToolTipService.ToolTip="{loc:StringResource Key=CopyPassword}">
-                                    <FontIcon Glyph="&#xE8C8;"/>
+                                    <FontIcon Glyph="&#xE8C8;"
+                                              FontSize="{StaticResource FontIconSize}"/>
                                 </Button>
                                 <Button Margin="2" 
                                         ToolTipService.ToolTip="{loc:StringResource Key=EditPassword}">
-                                    <FontIcon Glyph="&#xE70F;"/>
+                                    <FontIcon Glyph="&#xE70F;"
+                                              FontSize="{StaticResource FontIconSize}"/>
                                 </Button>
                                 <Button Margin="2" 
                                         ToolTipService.ToolTip="{loc:StringResource Key=DeletePassword}">
-                                    <FontIcon Glyph="&#xE74D;"/>
+                                    <FontIcon Glyph="&#xE74D;"
+                                              FontSize="{StaticResource FontIconSize}"/>
                                 </Button>
                             </StackPanel>
                         </Grid>
