Intermidiate commit: add a view for creating a new password

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/App.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/App.xaml
@@ -15,6 +15,8 @@
                     </ResourceDictionary.MergedDictionaries>
 
                     <converters:NullToCollapsedConverter x:Key="NullToCollapsedConverter"/>
+                    <converters:BoolToVisibilityConvereter x:Key="BoolToVisibilityConvereter"/>
+                    
                     <!--  Misc resources  -->
                     <Thickness x:Key="DocumentationPageContentPadding">20</Thickness>
                 </ResourceDictionary>
