--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -4,87 +4,132 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:controls="using:Pango.Desktop.Uwp.Controls"
     xmlns:loc="using:Pango.Desktop.Uwp.Core.Localization"
     xmlns:viewmodels="using:Pango.Desktop.Uwp.ViewModels"
-    xmlns:abstract="using:Pango.Desktop.Uwp.Views.Abstract" xmlns:controls="using:Pango.Desktop.Uwp.Controls"
+    xmlns:views="using:Pango.Desktop.Uwp.Views"
+    xmlns:abstract="using:Pango.Desktop.Uwp.Views.Abstract"
     mc:Ignorable="d"
     d:DataContext="{d:DesignInstance Type=viewmodels:PasswordsViewModel}"
     d:DesignHeight="300"
     d:DesignWidth="400">
 
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+        <Pivot x:Name="PasswordsIndex_Pivot">
+            <Pivot.HeaderTemplate>
+                <DataTemplate>
+                    <StackPanel Width="0"
+                                Height="0">
+                        <TextBlock Text="{Binding}" />
+                    </StackPanel>
+                </DataTemplate>
+            </Pivot.HeaderTemplate>
 
-        <TextBlock Text="{loc:StringResource Key=MyPasswords}"
-                   Style="{StaticResource HeaderTextBlockStyle}"
-                   Margin="20"/>
+            <PivotItem Margin="0, -65, 0, 0">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
 
-        <Grid Grid.Row="1"
-              Margin="15, 0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
+                    <TextBlock Margin="20" 
+                               Text="{loc:StringResource Key=MyPasswords}"
+                               Style="{StaticResource HeaderTextBlockStyle}"/>
 
-            <controls:FiltrationTextBox Margin="0,0" 
-                     MinWidth="300"
-                     PlaceholderText="{loc:StringResource Key=SearchPasswords}"
-                     VerticalAlignment="Center"
-                     HorizontalAlignment="Left"/>
+                    <Grid Grid.Row="1"
+                          Visibility="{Binding Path=HasPasswords, Converter={StaticResource BoolToVisibilityConvereter}}">
 
-            <CommandBar Grid.Column="1" 
-                        IsOpen="False" 
-                        Background="Transparent"
-                        DefaultLabelPosition="Right">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
 
-                <AppBarButton Icon="Add" 
-                              Label="{loc:StringResource Key=New}"
-                              ToolTipService.ToolTip="{loc:StringResource Key=AddNewPassword}"/>
-            </CommandBar>
-        </Grid>
-        
-        
-        <Grid Grid.Row="2"
-              Margin="10">
-            <ListView ItemsSource="{Binding Path=Passwords}">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <Grid>
+                        <Grid Margin="15, 0">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
-                            
-                            <TextBlock Text="{Binding Path=Name}"
-                                       VerticalAlignment="Center"/>
 
-                            <StackPanel Grid.Column="1" 
-                                        Orientation="Horizontal">
-                                <Button Margin="2" 
-                                        ToolTipService.ToolTip="{loc:StringResource Key=CopyPassword}">
-                                    <FontIcon Glyph="&#xE8C8;"
-                                              FontSize="{StaticResource FontIconSize}"/>
-                                </Button>
-                                <Button Margin="2" 
-                                        ToolTipService.ToolTip="{loc:StringResource Key=EditPassword}">
-                                    <FontIcon Glyph="&#xE70F;"
-                                              FontSize="{StaticResource FontIconSize}"/>
-                                </Button>
-                                <Button Margin="2" 
-                                        ToolTipService.ToolTip="{loc:StringResource Key=DeletePassword}">
-                                    <FontIcon Glyph="&#xE74D;"
-                                              FontSize="{StaticResource FontIconSize}"/>
-                                </Button>
-                            </StackPanel>
+                            <controls:FiltrationTextBox Margin="0,0" 
+                                                        MinWidth="300"
+                                                        VerticalAlignment="Center"
+                                                        HorizontalAlignment="Left"
+                                                        PlaceholderText="{loc:StringResource Key=SearchPasswords}"/>
+
+                            <CommandBar IsOpen="False"
+                                        Grid.Column="1" 
+                                        Background="Transparent"
+                                        DefaultLabelPosition="Right">
+
+                                <AppBarButton Icon="Add" 
+                                              Label="{loc:StringResource Key=New}"
+                                              ToolTipService.ToolTip="{loc:StringResource Key=AddNewPassword}"/>
+                            </CommandBar>
                         </Grid>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-        </Grid>
+
+                        <Grid Grid.Row="1"
+                              Margin="10">
+                            <ListView ItemsSource="{Binding Path=Passwords}">
+                                <ListView.ItemTemplate>
+                                    <DataTemplate>
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="Auto"/>
+                                            </Grid.ColumnDefinitions>
+
+                                            <TextBlock Text="{Binding Path=Name}"
+                                                       VerticalAlignment="Center"/>
+
+                                            <StackPanel Grid.Column="1"
+                                                        Orientation="Horizontal">
+                                                <Button Margin="2"
+                                                        ToolTipService.ToolTip="{loc:StringResource Key=CopyPassword}">
+                                                    <FontIcon Glyph="&#xE8C8;"
+                                                              FontSize="{StaticResource FontIconSize}"/>
+                                                </Button>
+                                                <Button Margin="2"
+                                                        ToolTipService.ToolTip="{loc:StringResource Key=EditPassword}">
+                                                    <FontIcon Glyph="&#xE70F;"
+                                              FontSize="{StaticResource FontIconSize}"/>
+                                                </Button>
+                                                <Button Margin="2" 
+                                                        ToolTipService.ToolTip="{loc:StringResource Key=DeletePassword}">
+                                                    <FontIcon Glyph="&#xE74D;"
+                                                              FontSize="{StaticResource FontIconSize}"/>
+                                                </Button>
+                                            </StackPanel>
+                                        </Grid>
+                                    </DataTemplate>
+                                </ListView.ItemTemplate>
+                            </ListView>
+                        </Grid>
+                    </Grid>
+
+                    <Grid Grid.Row="1"
+                          Visibility="{Binding Path=HasPasswords, Converter={StaticResource BoolToVisibilityConvereter},ConverterParameter=reverse}">
+                        <StackPanel Orientation="Vertical"
+                                    VerticalAlignment="Center"
+                                    HorizontalAlignment="Center">
+
+                            <TextBlock Text="You have no saved passwords" />
+                            <Button Margin="10" 
+                                    Content="Create Password"
+                                    HorizontalAlignment="Center"
+                                    Style="{StaticResource AccentButtonStyle}"
+                                    Command="{Binding Path=CreatePasswordCommand}"/>
+
+                        </StackPanel>
+                    </Grid>
+                </Grid>
+            </PivotItem>
+
+            <PivotItem>
+                <views:EditPasswordView />
+            </PivotItem>
+        </Pivot>
+        
+        
         
     </Grid>
 </abstract:PageBase>
