--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/Shell.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/Shell.xaml
@@ -21,16 +21,14 @@
                         Margin="10,40,10,10"/>
 
         <!--  Custom title bar  -->
-        <Border
-            x:Name="TitleBarBorder"
-            Height="40"
-            Margin="0,0,0,0"
-            Padding="10,0,0,0"
-            VerticalAlignment="Top"
-            Background="Transparent">
-            <StackPanel 
-                Orientation="Horizontal" 
-                Spacing="5">
+        <Border Height="40"
+                Margin="0,0,0,0"
+                Padding="10,0,0,0"
+                x:Name="TitleBarBorder"
+                VerticalAlignment="Top"
+                Background="Transparent">
+            <StackPanel Spacing="5"
+                        Orientation="Horizontal">
                 <TextBlock VerticalAlignment="Center"
                            Style="{StaticResource CaptionTextBlockStyle}">
                     <Run Text="Pango"/>
