Make OnNavigatedTo be called after its view navigation

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/EditUserView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/EditUserView.xaml
@@ -1,6 +1,6 @@
 ﻿<abstract:ViewBase
     xmlns:abstract="using:Pango.Desktop.Uwp.Views.Abstract"
-    x:Class="Pango.Desktop.Uwp.Views.NewUserView"
+    x:Class="Pango.Desktop.Uwp.Views.EditUserView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Pango.Desktop.Uwp.Views"
