Implement creation and deletion of passwords

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/EditPasswordView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/EditPasswordView.xaml
@@ -27,21 +27,25 @@
 
                 <StackPanel Orientation="Vertical">
                     <TextBox Margin="10" 
-                         Header="{loc:StringResource Key='Title'}" 
-                         PlaceholderText="{loc:StringResource Key='Title'}" />
+                             Text="{Binding Path=Name, Mode=TwoWay}"
+                             Header="{loc:StringResource Key='Title'}" 
+                             PlaceholderText="{loc:StringResource Key='Title'}" />
                     <TextBox Margin="10" 
-                         Header="{loc:StringResource Key='Login'}" 
-                         PlaceholderText="{loc:StringResource Key='EmailOrUsername'}" />
+                             Text="{Binding Path=Login, Mode=TwoWay}"
+                             Header="{loc:StringResource Key='Login'}" 
+                             PlaceholderText="{loc:StringResource Key='EmailOrUsername'}" />
                     <TextBox Margin="10" 
-                         Header="{loc:StringResource Key='Password'}" 
-                         PlaceholderText="{loc:StringResource Key='Password'}" />
+                             Text="{Binding Path=Value, Mode=TwoWay}"
+                             Header="{loc:StringResource Key='Password'}" 
+                             PlaceholderText="{loc:StringResource Key='Password'}" />
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal"
                             HorizontalAlignment="Right">
                     <Button Margin="5" 
                             Content="{loc:StringResource Key='Save'}"
-                            Style="{StaticResource AccentButtonStyle}"/>
+                            Style="{StaticResource AccentButtonStyle}"
+                            Command="{Binding Path=SavePasswordComand}"/>
                     <Button Margin="5" 
                             Content="{loc:StringResource Key='Cancel'}"
                             Command="{Binding Path=OpenIndexViewCommand}"/>
