--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -37,7 +37,7 @@
                                Style="{StaticResource HeaderTextBlockStyle}"/>
 
                     <Grid Grid.Row="1"
-                          Visibility="{Binding Path=HasPasswords, Converter={StaticResource BoolToVisibilityConvereter}}">
+                          Visibility="{Binding Path=HasPasswords, Converter={StaticResource BoolToVisibilityConvereter}, FallbackValue=Visible}">
 
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
@@ -63,6 +63,7 @@
 
                                 <AppBarButton Icon="Add" 
                                               Label="{loc:StringResource Key=New}"
+                                              Command="{Binding Path=CreatePasswordCommand}"
                                               ToolTipService.ToolTip="{loc:StringResource Key=AddNewPassword}"/>
                             </CommandBar>
                         </Grid>
@@ -74,14 +75,20 @@
                                     <DataTemplate>
                                         <Grid>
                                             <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="Auto"/>
                                                 <ColumnDefinition Width="*"/>
                                                 <ColumnDefinition Width="Auto"/>
                                             </Grid.ColumnDefinitions>
 
-                                            <TextBlock Text="{Binding Path=Name}"
+                                            <FontIcon Glyph="&#xE8D7;"
+                                                      Margin="5,2"
+                                                      FontSize="{StaticResource FontIconSize}"/>
+
+                                            <TextBlock Grid.Column="1" 
+                                                       Text="{Binding Path=Name}"
                                                        VerticalAlignment="Center"/>
 
-                                            <StackPanel Grid.Column="1"
+                                            <StackPanel Grid.Column="2"
                                                         Orientation="Horizontal">
                                                 <Button Margin="2"
                                                         ToolTipService.ToolTip="{loc:StringResource Key=CopyPassword}">
@@ -91,9 +98,11 @@
                                                 <Button Margin="2"
                                                         ToolTipService.ToolTip="{loc:StringResource Key=EditPassword}">
                                                     <FontIcon Glyph="&#xE70F;"
-                                              FontSize="{StaticResource FontIconSize}"/>
+                                                              FontSize="{StaticResource FontIconSize}"/>
                                                 </Button>
                                                 <Button Margin="2" 
+                                                        Command="{Binding ElementName=PasswordsIndex_Pivot, Path=DataContext.DeletePasswordCommand}"
+                                                        CommandParameter="{Binding}"
                                                         ToolTipService.ToolTip="{loc:StringResource Key=DeletePassword}">
                                                     <FontIcon Glyph="&#xE74D;"
                                                               FontSize="{StaticResource FontIconSize}"/>
@@ -107,7 +116,7 @@
                     </Grid>
 
                     <Grid Grid.Row="1"
-                          Visibility="{Binding Path=HasPasswords, Converter={StaticResource BoolToVisibilityConvereter},ConverterParameter=reverse}">
+                          Visibility="{Binding Path=HasPasswords, Converter={StaticResource BoolToVisibilityConvereter},ConverterParameter=reverse, FallbackValue=Collapsed}">
                         <StackPanel Orientation="Vertical"
                                     VerticalAlignment="Center"
                                     HorizontalAlignment="Center">
@@ -128,8 +137,5 @@
                 <views:EditPasswordView />
             </PivotItem>
         </Pivot>
-        
-        
-        
     </Grid>
 </abstract:PageBase>
