--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/App.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/App.xaml
@@ -11,6 +11,7 @@
                     <ResourceDictionary.MergedDictionaries>
                         <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
 
+                        <ResourceDictionary Source="Resources/Styles/Text.xaml" />
                         <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
                         <ResourceDictionary Source="Resources/Styles/TextBlockStyles.xaml" />
                         <ResourceDictionary Source="Resources/Styles/ToggleSwitchStyles.xaml" />
